--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-21 (0.2-8)
+* Fixed incorrect location of Mali's capital.
+  (Thanks to Sebastian Schutte)
+
 2010-11-04 (0.2-7)
 * Fixed GDR coding error (Buesingen exclave). (Thanks to
   Dan Reiter). Small changes to Java code.
