--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,4 +1,6 @@
 2012-01-07 (0.4-1)
+* Re-wrote the package to eliminate Java dependencies, which 
+  causes performance issues on some systems.
 * Updated GIS data to 2012: Added South Sudan, changed
   boundaries of Sudan. Note: When introducing the new ISOCODE for 
   South Sudan (728), the ISO also changed the ISOCODE for
