--- a/pkg/ChangeLog
+++ b/pkg/ChangeLog
@@ -1,11 +1,13 @@
-2016-11-25 (0.6pre)
+2016-11-30 (0.6)
 * Updated CShapes until June 30, 2016.
 * The sequence of polygons for the Soviet Union now uses the correct GW start
   and end dates. This used to be an inconsistency in all previous versions of the 
   dataset (thanks to Karim Bahgat for helping us create the new polygons). 
-* Fixed wrong end dates for Vietnam polygons in 1975.
-* Fixed wrong end date for China before separation of Taiwan in 1949.
-* Fixed wrong end date for Pakistan before separation of Bangladesh 
+* Fixed wrong GW date of Namibia's secession from South Africa
+* Set Indonesia's GW start date to Jan 1, 1946 in line with coding conventions.
+* Fixed wrong GW end dates for Vietnam polygons in 1975.
+* Fixed wrong GW end date for China before separation of Taiwan in 1949.
+* Fixed wrong GW end date for Pakistan before separation of Bangladesh 
   in 1971.
 * Fixed wrong capital name and location for the Mali Federation.
 * Dropped the Mali Federation from the GW list of states.
